Scrollbar fix, gruntfile modif (-svgmin)

--- a/dev/main_content.html
+++ b/dev/main_content.html
@@ -139,7 +139,11 @@
 
 <section class="c">
 	<h1>Yojimbo.fr</h1>
-	<!-- <img class="avatar" src="images/yojimbo_full.svg" alt="Yojimbo's avatar"> -->
+	<div class="contact">
+		<a href="">Linked In</a>
+		<a href="">CV</a>
+		<a href="">Mail</a>
+	</div>
 	<svg viewBox="0 0 160 440" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"><title>yojimbo_full</title>
 		<g sketch:type="MSLayerGroup" fill="none">
 			<path fill-opacity="0" fill="#D4D4D4" d="M0 235v-115h10v-10h30v10h20v130h-35v-15h-25zM160 120h-10v-10h-30v10h-20v130h35v-15h25v-115z"/>
