--- a/dev/head.html
+++ b/dev/head.html
@@ -4,5 +4,5 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/main_prefixed.css">
-	<!-- <link href='http://fonts.googleapis.com/css?family=Arvo:400,700|Josefin+Sans:400,700|Press+Start+2P' rel='stylesheet' type='text/css'> -->
+	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700|Josefin+Sans:400,700|Press+Start+2P' rel='stylesheet' type='text/css'>
 </head>
