Social links + CV

--- a/dev/main_content.html
+++ b/dev/main_content.html
@@ -140,9 +140,10 @@
 <section class="c">
 	<h1>Yojimbo.fr</h1>
 	<div class="contact">
-		<a href="">Linked In</a>
-		<a href="">CV</a>
-		<a href="">Mail</a>
+		<a href="https://github.com/Yojimb0/Yojimbo_2014"><img src="images/github.svg" alt="GitHub">GitHub</a>
+		<a href="http://www.linkedin.com/in/pypointereau"><img src="images/linkedin.svg" alt="LinkedIn">LinkedIn</a>
+		<a href="cv/cv.html"><img src="images/cv.svg" alt="CV">CV</a>
+		<a href="mailto://py.pointereau@gmail.com"><img src="images/mail.svg" alt="Mail">Mail</a>
 	</div>
 	<svg viewBox="0 0 160 440" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"><title>yojimbo_full</title>
 		<g sketch:type="MSLayerGroup" fill="none">
