--- a/dev/head.html
+++ b/dev/head.html
@@ -1,8 +1,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Yojimbo.fr</title>
-	<meta name="description" content="">
+	<meta name="description" content="I'm Yojimbo, welcome on my personal website. I'm a front-end developper (HTML, CSS, Sass, Compas, Javascript, Coffeescript, NodeJS, AngularJS, BackboneJS, GruntJS ...), ">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/main_prefixed.css">
-	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700|Josefin+Sans:400,700|Press+Start+2P' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
