Calling good css file in head

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,7 @@
 	<title>Yojimbo.fr</title>
 	<meta name="description" content="I'm Yojimbo, welcome on my personal website. I'm a front-end developper (HTML, CSS, Sass, Compas, Javascript, Coffeescript, NodeJS, AngularJS, BackboneJS, GruntJS ...), ">
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/main_prefixed.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 </html>
