--- a/dev/index.html
+++ b/dev/index.html
@@ -1016,6 +1016,6 @@
     <div></div>
   </div>
   <div id="responsive_state"></div>
-  <script src="js/lib/jquery.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/main.js" inline="true"></script>
 </body>
