Spell checking, image width declaration

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,8 +4,7 @@
 	<title>Yojimbo.fr</title>
 	<meta name="description" content="I'm Yojimbo, welcome on my personal website. I'm a front-end developper (HTML, CSS, Sass, Compas, Javascript, Coffeescript, NodeJS, AngularJS, BackboneJS, GruntJS ...), ">
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/main.css" inline="true">
 </head>
 </html>
 <body class="disable_transitions">
@@ -15,7 +14,7 @@
 	</header>
 		<div class="scrollable_area">
 		<div class="d_content">
-			<p>Hi, I'm <strong>Pierre</strong>, I'm a <strong>front-end developer</strong>. I'm actually living in Manly (Australia)</p>
+			<p>Hi, I'm <strong>Pierre</strong>, I'm a <strong>front-end developer</strong>. I'm currently living in Manly (Australia)</p>
 			<p>Welcome on my personal website</p>
 			<p>I've always be interested in website creation. I'm in the front-end world since 2003, for personal projects at the begining (Gaming portals and forum, flash-based projects …).</p>
 			<p>After studying networks and telecommunication, I specialized in software development studies, but I was lacking something more design-driven. It's in 2006 that I realized front-end could be my real job.</p>
@@ -150,14 +149,18 @@
 
 <section class="c">
 	<h1>Yojimbo.fr</h1>
+	<!--[if lt IE 8]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 	<div class="contact">
-		<a href="https://github.com/Yojimb0/Yojimbo_2014"><img src="images/github.svg" alt="GitHub">GitHub</a>
-		<a href="http://www.linkedin.com/in/pypointereau"><img src="images/linkedin.svg" alt="LinkedIn">LinkedIn</a>
-		<a href="cv/cv.html"><img src="images/cv.svg" alt="CV">CV</a>
-		<a href="mailto://py.pointereau@gmail.com"><img src="images/mail.svg" alt="Mail">Mail</a>
+		<a href="https://github.com/Yojimb0/Yojimbo_2014"><img src="images/github.svg" width="100" height="100" alt="GitHub">GitHub</a>
+		<a href="http://www.linkedin.com/in/pypointereau"><img src="images/linkedin.svg" width="100" height="100" alt="LinkedIn">LinkedIn</a>
+		<a href="cv/cv.html"><img src="images/cv.svg" width="100" height="100" alt="CV">CV</a>
+		<a href="mailto://py.pointereau@gmail.com"><img src="images/mail.svg" width="100" height="100" alt="Mail">Mail</a>
 	</div>
-	<svg viewBox="0 0 160 440" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"><title>yojimbo_full</title>
-		<g sketch:type="MSLayerGroup" fill="none">
+	<svg viewBox="0 0 160 440">
+		<title>yojimbo_full</title>
+		<g fill="none">
 			<path fill-opacity="0" fill="#D4D4D4" d="M0 235v-115h10v-10h30v10h20v130h-35v-15h-25zM160 120h-10v-10h-30v10h-20v130h35v-15h25v-115z"/>
 			<path fill-opacity="0" fill="#B2B2B2" d="M0 235h25v5h-25z"/>
 			<path fill-opacity="0" fill="#B2B2B2" d="M135 235h25v5h-25z"/>
