Readme tweaks, Mailto-link fix

--- a/dev/main_content.html
+++ b/dev/main_content.html
@@ -146,7 +146,7 @@
 		<a href="https://github.com/Yojimb0/Yojimbo_2014"><img src="images/github.svg" width="100" height="100" alt="GitHub">GitHub</a>
 		<a href="http://www.linkedin.com/in/pypointereau"><img src="images/linkedin.svg" width="100" height="100" alt="LinkedIn">LinkedIn</a>
 		<a href="cv/cv.html"><img src="images/cv.svg" width="100" height="100" alt="CV">CV</a>
-		<a href="mailto://py.pointereau@gmail.com"><img src="images/mail.svg" width="100" height="100" alt="Mail">Mail</a>
+		<a href="mailto:py.pointereau@gmail.com"><img src="images/mail.svg" width="100" height="100" alt="Mail">Mail</a>
 	</div>
 	<svg viewBox="0 0 160 440">
 		<title>yojimbo_full</title>
