--- a/dev/index.html
+++ b/dev/index.html
@@ -35,7 +35,7 @@
 				<a class="project_link project_link_yj13" data-project="yj13"><span class="project_name">Yojimbo.fr</span></a>
 			</article>
 			<article class="project_link_wrapper l cf">
-				<a class="project_link project_link_abcc" data-project="abcc"><span class="project_name">ABC<br>Network</span></a>
+				<a class="project_link project_link_abcc" data-project="abcc"><span class="project_name">Australian Broadcasting Corporation (ABC)</span></a>
 			</article>
 
 
@@ -44,8 +44,11 @@
 
 			
 			<article class="project_link_wrapper l cf">
-				<a class="project_link project_link_aapm" data-project="aapm"><span class="project_name">AAP<br>Multimedia</span></a>
+				<a class="project_link project_link_aapm" data-project="aapm"><span class="project_name">Australian Associated Press (AAP)</span></a>
 			</article>
+
+			<div class="project_year_wrapper cf"><div class="project_year">Sydney (Asutralia)</div></div>
+
 			<article class="project_link_wrapper s cf">
 				<a class="project_link project_link_kube" data-project="kube"><span class="project_name">KubeDesign</span></a>
 			</article>
@@ -100,7 +103,7 @@
 
 
 			<div class="project_year_wrapper cf"><div class="project_year">2009</div></div>
-
+			<div class="project_year_wrapper cf"><div class="project_year">Paris (France)</div></div>
 
 			
 			<article class="project_link_wrapper l cf">
@@ -134,7 +137,7 @@
 				<a class="project_link project_link_yj07" data-project="yj07"><span class="project_name">yojimbo</span></a>
 			</article>
 
-
+			<div class="project_year_wrapper cf"><div class="project_year">Limoges (France)</div></div>
 			<div class="project_year_wrapper cf"><div class="project_year">2007</div></div>
 
 
@@ -143,6 +146,7 @@
 			</article>
 
 			<div class="project_year_wrapper cf"><div class="project_year">2004</div></div>
+			<div class="project_year_wrapper cf"><div class="project_year">Béziers (France)</div></div>
 		</ul>
 	</div>
 </aside>
