--- a/dev/main_content.html
+++ b/dev/main_content.html
@@ -8,7 +8,7 @@
 			<p>Welcome on my personal website</p>
 			<p>I've always been interested in website creation. I'm in the front-end world since 2003, for personal projects at the beginning (Gaming portals and forum, flash-based projects …).</p>
 			<p>After studying networks and telecommunication, I specialized in software development studies, but I was lacking something more design-driven. It's in 2006 that I realized front-end could be my real job.</p>
-			<p>Since that time, I try my best to follow this fast evolving world, Re-evaluating my knowledge when new ideas arises. Sometimes a bit obsessive, I'm constantly looking for ways to improve my workflow.</p>
+			<p>Since that time, I try my best to follow this fast evolving world, Re-evaluating my knowledge when new ideas arise. Sometimes a bit obsessive, I'm constantly looking for ways to improve my workflow.</p>
 		</div>
 	</div>
 
