--- a/dev/index.html
+++ b/dev/index.html
@@ -508,7 +508,7 @@
                 <li>Optimizations (Especially Google Pagespeed Service use)</li>
               </ul>
             </div>
-            <div class="project_buttons"><a href="http://www.yojimbo.fr/2011/" class="project_view">View website</a><a class="project_close">Close card</a>
+            <div class="project_buttons"><a href="http://www.yojimbo.fr/_/2011/" class="project_view">View website</a><a class="project_close">Close card</a>
             </div>
           </div>
         </div>
@@ -689,7 +689,7 @@
                 <li>Flickr feed integration</li>
               </ul>
             </div>
-            <div class="project_buttons"><a class="project_close">Close card</a>
+            <div class="project_buttons"><a href="http://www.yojimbo.fr/_/2009/" class="project_view">View website</a><a class="project_close">Close card</a>
             </div>
           </div>
         </div>
@@ -976,7 +976,7 @@
                 <li>Flash design &amp; dev</li>
               </ul>
             </div>
-            <div class="project_buttons"><a href="http://www.yojimbo.fr/2007/" class="project_view">View website</a><a class="project_close">Close card</a>
+            <div class="project_buttons"><a href="http://www.yojimbo.fr/_/2007/" class="project_view">View website</a><a class="project_close">Close card</a>
             </div>
           </div>
         </div>
