CV Update, Fix default font

--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -95,6 +95,7 @@
 			
 			<section>
 				<p>Since I started using Internet, I have been passionate about website building. At first it was only a hobby, and later I realized it could be my full-time job. It has been 7 years now, and I am still moving forward, always learning and experimenting to find solutions for every new step of modern web development.</p>
+				<p>You cal also find some details on my personal website: <a href="http://yojimbo.fr">yojimbo.fr</a>, and dissect its developement on the <a href="https://github.com/Yojimb0/Yojimbo_2014">GitHub repository</a> </p>
 			</section>
 		</div>
 
@@ -126,9 +127,9 @@
 			</section>
 		</div>
 
-		<div class="nobreak">
+		<div>
 			<h3>Technical skills</h3>
-			<section>
+			<section class="nobreak">
 				<h5>Languages & technologies</h5>
 				<table>
 					<tr>
@@ -137,22 +138,32 @@
 					</tr>
 					<tr>
 						<td>CSS</td>
-						<td>Use of preprocessors, LESS, SASS, Compass<br>Progressive enhancement approach, spriting, optimizations</td>
+						<td>Use of preprocessors, LESS, SASS, Compass<br>Responsive design, Progressive enhancement approach, spriting, optimizations</td>
 					</tr>
 					<tr>
 						<td>JavaScript</td>
 						<td>Use of modern object oriented patterns, use of modern frameworks (AngularJS, Backbone ..), frameworks optimizations, performance issues<br>Few experiments with NodeJS</td>
 					</tr>
 					<tr>
+						<td>Between front and back</td>
+						<td>PHP Templating (CodeIgniter, CakePhp, Drupal)<br>Java templating with Freemarker<br>ASP.net templating</td>
+					</tr>
+					<tr>
 						<td>Back-end</td>
-						<td>PHP - Use of frameworks (CodeIgniter, CakePhp)<br>Databases - MySQL, MongoDB testing projects<br>ASP.net - Mainly for templating purpose</td>
+						<td>PHP<br>Databases - MySQL, MongoDB testing projects<br>NodeJS including ExpressJS, sockets, RESTful approach</td>
 					</tr>
 				</table>
+			</section>
+			<section class="nobreak">
 				<h5>Softwares and tools</h5>
 				<table>
 					<tr>
 						<td>Code editors</td>
-						<td>Sublime Text 2/3, Brackets.io, Coda 2, Notepad ++<br>Source control: TFS, some Github and SVN</td>
+						<td>Sublime Text 2/3, Brackets.io, Coda 2, Notepad ++</td>
+					</tr>
+					<tr>
+						<td>Source control</td>
+						<td>Git (<a href="https://github.com/Yojimb0/Yojimbo_2014">My Github account</a>), TFS</td>
 					</tr>
 					<tr>
 						<td>Design</td>
@@ -160,11 +171,22 @@
 					</tr>
 					<tr>
 						<td>Workflow enhancement</td>
-						<td>Constant use of Chrome DevTools, Frequent use of LiveReload, knowledge on other process automation tools (Brunch, Yeoman, Grunt), Transmit for FTP needs</td>
+						<td>Constant use of Chrome DevTools, Grunt Automation (With plugins like Yeoman, Sass, Watch, Uglify, JSHint, etc ..), Frequent use of live-reloading (Through grunt, or LiveReload app), knowledge on other process automation tools (Brunch, Gulp), Transmit or SublimeFTP for FTP needs</td>
 					</tr>
 					<tr>
 						<td>Online tools used,<br>blog regularly consulted</td>
-						<td><a href="http://devdocs.io">Devdocs.io</a>, <a href="http://stackoverflow.com">stackoverflow.com</a>, <a href="http://tutsplus.com">tutsplus.com</a> network, <a href="http://css-tricks.com">css-tricks.com</a>, <a href="http://google.com/fonts">google.com/fonts</a>, <a href="http://lea.verou.me">lea.verou.me</a>, <a href="http://smashingmagazine.com">smashingmagazine.com</a>, <a href="http://paulirish.com">paulirish.com</a></td>
+						<td>
+							<a href="http://devdocs.io">Devdocs.io</a>, 
+							<a href="http://stackoverflow.com">stackoverflow.com</a>, 
+							<a href="http://tutsplus.com">tutsplus.com</a> network, 
+							<a href="http://css-tricks.com">css-tricks.com</a>, 
+							<a href="http://google.com/fonts">google.com/fonts</a>, 
+							<a href="http://lea.verou.me">lea.verou.me</a>, 
+							<a href="http://smashingmagazine.com">smashingmagazine.com</a>, 
+							<a href="http://paulirish.com">paulirish.com</a>, 
+							<a href="http://webplatformdaily.org">webplatformdaily.org</a>,
+							<a href="http://addyosmani.com">addyosmani.com</a>
+						</td>
 					</tr>
 				</table>
 			</section>
@@ -172,7 +194,7 @@
 		
 
 		<div class="nobreak">
-			<h3 class="nomargin">Language</h3>
+			<h3>Language</h3>
 			<section>
 				<p>French: Mother Tongue<br>English: Fluent.</p>
 			</section>
@@ -191,9 +213,9 @@
 				</em></p>
 				<h5>Key responsibilities</h5>
 				<ul>
-					<li>CMS Templating</li>
-					<li>CSS / HTML</li>				
-					<li>Javascript and jQuery plugin development</li>				
+					<li>CMS Templating over a Java backend with Freemarker</li>
+					<li>CSS / HTML, on the higly modular codebase, use of Sass and mixins to handle responsive states</li>
+					<li>Javascript and jQuery plugin development, BackboneJS (For the search result)</li>
 				</ul>
 			</section>
 		</div>
@@ -209,13 +231,20 @@
 				</em></p>
 				<h5>Key responsibilities</h5>
 				<ul>
-					<li>Angular front-end development</li>
+					<li>AngularJS front-end development</li>
 					<li>CSS / HTML</li>				
 				</ul>
 				<h5>Key achievements</h5>
 				<ul>
-					<li>Angular and Javascript skills upgrade</li>
-					<li>First real-world Git usage</li>
+					<li>
+						AngularJS developement, to create the front-end side of an images/videos shop.
+						<ul>
+							<li>Authentification to the servers</li>
+							<li>API calling to retrieve listings and show images</li>
+							<li>secure downloads of the assets ...</li>
+						</ul>
+					</li>
+					<li>Responsive design, targetting tablets and desktop browsers</li>
 					<li>First Agile experience</li>
 					<li>Good teamwork with AAP team</li>
 				</ul>
@@ -350,7 +379,6 @@
 					<li><a href="http://kubedesign.fr">kubedesign.fr</a> (3D images creation studio, for interior design or exhibition stands) - HTML, CSS, JavaScript</li>
 					<li>This CV - Build in static HTML and CSS, with webfont, simply printed in PDF from Google Chrome</li>
 				</ul>
-				<p>Complete listing available on my personal website: <a href="http://yojimbo.fr">yojimbo.fr</a></p>
 			</section>
 		</div>
 
