--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -104,7 +104,11 @@
 			<section>
 				<table>
 					<tr>
-						<td><small>Jan. 2014</small></td>
+						<td><small>March 2014</small></td>
+						<td><strong>Bauer Media</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
+					</tr>
+					<tr>
+						<td><small>Jan. 2014 - March 2014</small></td>
 						<td><strong>ABC</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
@@ -204,9 +208,24 @@
 
 
 		
+		<div class="nobreak">
+			<h4><em>March 2014:</em> Front-end web developer at <strong>Bauer Media</strong> - Sydney CBD (Australia)</h4>
+			<section>
+				<p><em>
+					<a href="http://www.bauer-media.com.au/">Bauer Media</a> publishes over 80 magazines in Australia with 45 audited titles selling around 85 million copies each year
+				</em></p>
+				<h5>Key responsibilities</h5>
+				<ul>
+					<li>Complete front-end rewrite of <a href="http://magshop.com.au/">MagShop website</a> (Under development)</li>
+					<li>Front-End research and prototyping (Javascript Framework for the checkout process, async components loading ...)</li>
+					<li>Responsive Design</li>
+				</ul>
+			</section>
+		</div>
+
 
 		<div class="nobreak">
-			<h4><em>Jan. 2014:</em> Front-end web developer at <strong>ABC</strong> - Sydney CBD (Australia)</h4>
+			<h4><em>Jan. 2014 - March 2014:</em> Front-end web developer at <strong>ABC</strong> - Sydney CBD (Australia)</h4>
 			<section>
 				<p><em>
 					<a href="http://www.abc.net.au/">ABC</a>. Australia's national public broadcaster. With a total annual budget of A$1.22 billion, the corporation provides television, radio, online and mobile services throughout metropolitan and regional Australia, as well as overseas through the Australia Network and Radio Australia.
