--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -105,31 +105,31 @@
 				<table>
 					<tr>
 						<td><small>August 2014 - Now</small></td>
-						<td><strong>News Corp Australia</strong> - Sydney CBD (Australia)<br><em>Front-end web developer / Front-end Architect</em></td>
+						<td><strong>News Corp Australia</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer / Front-end Architect</em></td>
 					</tr>
 					<tr>
 						<td><small>March 2014 - August 2014</small></td>
-						<td><strong>Bauer Media</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
+						<td><strong>Bauer Media</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Jan. 2014 - March 2014</small></td>
-						<td><strong>ABC</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
+						<td><strong>ABC</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Oct. 2013 - Jan. 2014</small></td>
-						<td><strong>Panthacorp</strong> - Manly (Australia)<br><em>Front-end web developer</em></td>
+						<td><strong>Panthacorp</strong> - Manly (Australia)</td><td><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Oct. 2009 - Aug. 2013</small></td>
-						<td><strong>Ventadis</strong> - Paris (France)<br><em>Front-end web developer</em></td>
+						<td><strong>Ventadis</strong> - Paris (France)</td><td><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Sept. 2007 - Oct. 2009</small></td>
-						<td><strong>Nala Multimédia</strong> - Limoges (France)<br><em>Back-end & Front-end web developer</em></td>
+						<td><strong>Nala Multimédia</strong> - Limoges (France)</td><td><em>Back-end & Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Sept. 2005 - Sept. 2007</small></td>
-						<td><strong>AGM</strong> - Limoges (France)<br><em>Software developer, web designer & developer</em></td>
+						<td><strong>AGM</strong> - Limoges (France)</td><td><em>Software developer, web designer & developer</em></td>
 					</tr>
 				</table>
 			</section>
@@ -154,11 +154,11 @@
 					</tr>
 					<tr>
 						<td>Between front and back</td>
-						<td>PHP Templating (CodeIgniter, CakePhp, Drupal)<br>Java templating with Freemarker<br>ASP.net templating</td>
+						<td>PHP Templating (CodeIgniter, CakePhp, Drupal), Java templating with Freemarker, ASP.net templating</td>
 					</tr>
 					<tr>
 						<td>Back-end</td>
-						<td>NodeJS including ExpressJS, sockets, RESTful approach<br>PHP<br>Databases - MySQL, MongoDB testing projects</td>
+						<td>NodeJS including ExpressJS, sockets, RESTful approach, PHP, MySQL, MongoDB</td>
 					</tr>
 				</table>
 			</section>
